TH-176-aura: Fix logo squished in mobile sidemenu (#61)

--- a/themes/aura/styles/navbar.scss
+++ b/themes/aura/styles/navbar.scss
@@ -223,8 +223,15 @@
     padding: 20px 16px;
     display: block;
 
-    img {
-      max-height: 40px;
+    a {
+      display: inline-block;
+      width: fit-content;
+
+      img {
+        max-height: 40px;
+        max-width: 100%;
+        width: fit-content;
+      }
     }
   }
 
@@ -251,7 +258,8 @@
   }
 
   .close-drawer-btn {
-    float: left;
+    position: absolute;
+    inset-inline-start: 0;
     cursor: pointer;
     width: 40px;
     height: 40px;
